--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "axios": "^0.27.2",
-    "boostrap": "^2.0.0",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
   },
